--- a/src/styles/Child.css
+++ b/src/styles/Child.css
@@ -4,6 +4,7 @@
     margin: 20px;
     border: 1px white dotted;
     border-radius: 5px;
+    /* background-color: black; */
 }
 
 #master{
@@ -16,3 +17,4 @@
     color: white;
     text-align: center;
 }
+
